--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,13 +17,13 @@ dependencies:
     sdk: flutter
   flutter_screenutil: 0.5.2
   dio: 2.1.7
-  shared_preferences: 0.5.2
+  shared_preferences: 0.5.3
   flutter_easyrefresh: 1.2.7
   url_launcher: 4.2.0
   photo_view: 0.2.4
   image_picker: 0.5.0
   amap_location: 0.2.0
-  simple_permissions: 0.1.9
+  # simple_permissions: 0.1.9
   # permission_handler: 3.2.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
